--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
   "private": true,
   "homepage": "https://Oksana-Tnt.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
+    "toast": "^0.5.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
